@@ -4,6 +4,7 @@ v0.0.8
  - Add support for subclassing. (just add a 'type' meta)
  - Implement Project#all.
  - Implement Page#all and Page#all(type).
+ - Fix binary files losing extensions on 'hyde build'.
 
 v0.0.7
 ------
